2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceiter.c (gtk_source_iter_forward_search):
	make limit an inclusive boundary. (#321300)

2005-11-14  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/fortran.lang: add missing keywords.
	Patch by Jerry DeLisle. See bug #317898.

2005-10-18  Nate Nielsen  <nielsen@memberwebs.com>

	* gtksourceview/language-specs/javascript.lang: Moved 
	'const' into keywords. See bug #317978

=== gtksourceview 1.4.2 ===

2005-10-03  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.2.

2005-09-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/Makefile.am: add LDFLAGS = -no-undefined, for
	benefit of people compiling on win32. Suggested by
	yselkowitz@users.sourceforge.net, bug #314414.

=== gtksourceview 1.4.1 ===

2005-09-06  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.1 including the docs in the tarball.

=== gtksourceview 1.4.0 ===

2005-09-05  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.4.0.

=== gtksourceview 1.3.93 ===

2005-08-29  Paolo Maggi  <paolo@gnome.org>

	* configure.in:
	* README:
	* NEWS: release 1.3.93.

2005-08-29  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c (key_press_event): shift+enter
	doesn't autoindent.

2005-08-25  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #312482: Undo manager warning

	* gtksourceview/gtksourceundomanager.c
	(gtk_source_undo_manager_modified_changed_handler): action can be NULL
	when internally undoing/redoing a non undoable action.

=== gtksourceview 1.3.92 ===

2005-08-08  Paolo Maggi  <paolo@gnome.org>

	* configure.in:
	* README:
	* NEWS: release 1.3.92.

2005-08-19  Dan Damian  <dand@gnome.ro>

	* configure.in: Added "ro" to ALL_LINGUAS.

=== gtksourceview 1.3.91 ===

2005-08-08  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.3.91.
